# circle-ooak

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-test.yml  release.yml
docs/community-examples/: agentkit-circle-ooak.md
example/: run_agent.py  wallet_agent.py
src/: agent_tool.py  run_agent.py  secure_tool.py  wallet_agent.py  workflow_manager.py
src/circle_ooak/: agent_tool.py  instance_agent.py  secure_tool.py  workflow_manager.py
test/: model_unit_test.py
