[project]
name = "circle-ooak"
version = "0.0.1"
authors = [
  { name="Mira Belenkiy", email="mira.belenkiy@circle.com" },
]
description = "OOAK: Object Oriented Agent Kit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "openai",
    "openai-agents",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/circlefin/circle-ooak"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
